--- a/assets/css/price-manager.css
+++ b/assets/css/price-manager.css
@@ -14,6 +14,15 @@
     margin-right: 8px;
 }
 
+.psp-filters {
+    margin-bottom: 20px;
+    display: flex;
+    gap: 15px;
+}
+.psp-filter-select {
+    min-width: 200px;
+}
+
 .psp-table {
     margin-top: 20px;
 }
